# kafka-json-processor

./: .gitignore  Cargo.toml  LICENSE  README.md  crates.js  processor.properties  search-index.js  settings.html  source-files.js
.github/workflows/: main.yml  with_deploy.yml
benches/: pretty_json.rs  pretty_xml.rs
examples/: simple.rs
implementors/kjp_generator_plugin/: trait.JsonFieldName.js
kafka-json-processor-core/: Cargo.toml  LICENSE  README.md
kafka-json-processor-core/benches/: pretty_json.rs  pretty_xml.rs
kafka-json-processor-core/examples/: simple.rs
kafka-json-processor-core/src/: config.rs  consumer.rs  error.rs  journal.rs  lib.rs  processor.rs  producer.rs  simulation.rs
kafka-json-processor-core/src/formatters/: json.rs  xml.rs
kafka-json-processor-generator/: Cargo.toml
kafka-json-processor-generator/src/: lib.rs  main.rs  processors.rs  project.rs
kafka-json-processor-generator/test-examples/: correct.yaml
kafka-json-processor-generator/tests/: integration_test.rs
kafka_json_processor_core/: all.html  enum.PendingMessage.html  fn.run_processor.html  index.html  sidebar-items.js  struct.MessageOffset.html  struct.Stream.html
kafka_json_processor_core/config/: index.html  sidebar-items.js  struct.Config.html  struct.InternalConfig.html
kafka_json_processor_core/error/: enum.ErrorKind.html  index.html  sidebar-items.js  struct.ProcessingError.html
kafka_json_processor_core/formatters/: index.html  sidebar-items.js
kafka_json_processor_core/journal/: index.html  sidebar-items.js  struct.MessageOffsetHolder.html  struct.OffsetKey.html
kafka_json_processor_core/processor/: enum.ObjectKey.html  fn.process_payload.html  index.html  sidebar-items.js  struct.OutputMessage.html  struct.SerializedOutputMessage.html  trait.ObjectTree.html  type.ProcessingResult.html  type.Processor.html
kafka_json_processor_core/simulation/: fn.simulate_streams.html  fn.simulate_streams_from_default_folder.html  index.html  sidebar-items.js
kjp-generator/: Cargo.toml  LICENSE  README.md
kjp-generator-generators/: copy_field.sh  copy_regex.sh  pretty_json.sh  pretty_xml.sh  static_field.sh
kjp-generator-generators/util/: params.sh
kjp-generator-plugin/: Cargo.toml  LICENSE  README.md
kjp-generator-plugin/examples/: static_field.rs
kjp-generator-plugin/src/: lib.rs
kjp-generator/src/: lib.rs  main.rs  processors.rs  project.rs
kjp-generator/src/processors/: copy_field.rs  static_field.rs
kjp-generator/tests/: integration_test.rs
kjp_generator/: all.html  fn.read_and_parse_and_generate.html  index.html  sidebar-items.js  struct.Stream.html  struct.Template.html
kjp_generator/processors/: constant.FIELD_KEY.html  constant.GENERATOR_KEY.html  enum.ProcessorGenerationError.html  fn.create_processor_generators.html  fn.generate_processors.html  index.html  sidebar-items.js  struct.Processor.html
kjp_generator/project/: fn.generate_cargo.html  fn.generate_main.html  index.html  sidebar-items.js
kjp_generator_plugin/: all.html  enum.GeneratorError.html  fn.json_path_to_object_key.html  fn.read_params.html  fn.return_generated.html  index.html  sidebar-items.js  struct.ProcessorParams.html  trait.JsonFieldName.html
simulations/in_out/: test.sample  (+2 more)
src/: config.rs  consumer.rs  formatters.rs  lib.rs  main.rs  processor.rs  producer.rs  simulation.rs  xml.rs
template-examples/: all_processors.yaml  correct.yaml
(+48 files in other folders)
