[package]
name = "kafka_json_processor_core"
description = "The core logic for your Kafka processor, part of kafka-json-processor project."
version = "0.1.0"
edition = "2021"
authors = ["multicatch <cezaryre@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/multicatch/kafka-json-processor"
repository = "https://github.com/multicatch/kafka-json-processor"
documentation = "https://multicatch.github.io/kafka-json-processor/kafka_json_processor_core/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9.0"
tokio = { version = "1.15.0", features = ["rt", "rt-multi-thread"] }
rdkafka = { version = "0.28.0", features = ["cmake-build"] }
serde_json = "1.0.83"
crossbeam = "0.8.2"
crossbeam-channel = "0.5.6"
lazy_static = "1.4.0"
regex = "1.7.0"