[package]
name = "kjp_generator_plugin"
description = "The base for a custom code generator for kjp-generator, part of kafka-json-processor project."
version = "0.1.0"
edition = "2021"
authors = ["multicatch <cezaryre@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/multicatch/kafka-json-processor"
repository = "https://github.com/multicatch/kafka-json-processor"
documentation = "https://multicatch.github.io/kafka-json-processor/kjp_generator_plugin/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"
