[package]
name = "kjp_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9.0"
clap = { version = "4.0.25", features = ["derive"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_yaml = "0.9.14"
kjp_generator_plugin = { path = "../kjp-generator-plugin" }
regex = "1.7.0"