[package]
name = "kjp_generator"
description = "Custom Kafka JSON processor generator, part of kafka-json-processor project."
version = "0.1.2"
edition = "2021"
authors = ["multicatch <cezaryre@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/multicatch/kafka-json-processor"
repository = "https://github.com/multicatch/kafka-json-processor"
documentation = "https://multicatch.github.io/kafka-json-processor/kjp_generator/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9.0"
clap = { version = "4.0.25", features = ["derive"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_yaml = "0.9.14"
kjp_generator_plugin = "0.1.0"
regex = "1.7.0"